app - allowing use of multi-line strings.

--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/journal/bootstrap.min.css" rel="stylesheet" integrity="sha384-1L94saFXWAvEw88RkpRz8r28eQMvt7kG9ux3DdCqya/P3CfLNtgqzMnyaUa49Pl2" crossorigin="anonymous">
-    <title>My React App</title>
+    <title>Case Converter</title>
   </head>
   <body>
-    <div id="app" class="container"></div>
+    <div class="container">
+      <h1>Case Converter</h1>
+      <p>Based on the String functions in <a href="https://lodash.com/docs/4.17.4" target="_blank" rel="noopener">Lodash</a>.</p>
+      <div id="app"></div>
+    </div>
 
     <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
