app - add base64 functionality.

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
       <h1>String Utilities</h1>
-      <p>Based on the String functions in <a href="https://lodash.com/docs/4.17.4" target="_blank" rel="noopener">Lodash</a>.</p>
+      <p>Handy string utilities!</p>
       <div id="app"></div>
     </div>
 
